# everett

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml  treefmt.nix
.claude/: settings.json
.claude/memory/: MEMORY.md  ci.md  project-overview.md  publishing.md  tooling.md
.github/workflows/: ci.yml
benches/: gate_apply.rs
docs/: design.md  kernel-math.md
examples/: bell.rs  hamiltonian.rs  noise.rs  phase_estimation.rs  qft.rs  stabilizer.rs  superdense.rs  teleportation.rs
src/: circuit.rs  complex.rs  density.rs  error.rs  gate.rs  kernel.rs  lib.rs  measure.rs  noise.rs  op.rs  qubit.rs  rng.rs  state.rs
src/algorithms/: hamiltonian.rs  mod.rs  phase_estimation.rs  prep.rs  qft.rs  superdense.rs  teleport.rs
src/backend/: density_matrix.rs  mod.rs  stabilizer.rs  statevector.rs
src/qasm/: emit.rs  gates.rs  mod.rs  parse.rs
tests/: algorithms_hamiltonian.rs  algorithms_phase_estimation.rs  algorithms_prep.rs  algorithms_qft.rs  algorithms_superdense.rs  algorithms_teleport.rs  properties.rs  qasm_corpus.rs  stabilizer.rs
